Evento de selecionar veiculo na view buscar veiculo. Tirando campo email da tela de operacoes.

--- a/src/main/java/com/luizfrancisco/estacionamento/view/Principal.form
+++ b/src/main/java/com/luizfrancisco/estacionamento/view/Principal.form
@@ -510,11 +510,7 @@
                               </Group>
                               <Group type="102" attributes="0">
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Group type="102" alignment="0" attributes="0">
-                                          <Component id="txtNomeClienteOp" min="-2" pref="245" max="-2" attributes="0"/>
-                                          <EmptySpace max="-2" attributes="0"/>
-                                          <Component id="txtEmailOp" min="-2" pref="245" max="-2" attributes="0"/>
-                                      </Group>
+                                      <Component id="txtNomeClienteOp" alignment="0" min="-2" pref="245" max="-2" attributes="0"/>
                                       <Group type="102" alignment="0" attributes="0">
                                           <Component id="cbxVagas" min="-2" pref="135" max="-2" attributes="0"/>
                                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -547,10 +543,7 @@
                               <Component id="txtCorOp" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace pref="17" max="32767" attributes="0"/>
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="txtNomeClienteOp" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="txtEmailOp" alignment="3" min="-2" max="-2" attributes="0"/>
-                          </Group>
+                          <Component id="txtNomeClienteOp" min="-2" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" attributes="0">
                                   <EmptySpace max="-2" attributes="0"/>
@@ -634,18 +627,6 @@
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Editar"/>
                   </Properties>
-                </Component>
-                <Component class="javax.swing.JTextField" name="txtEmailOp">
-                  <Properties>
-                    <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-                      <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-                        <TitledBorder title="Email"/>
-                      </Border>
-                    </Property>
-                  </Properties>
-                  <Events>
-                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtEmailOpActionPerformed"/>
-                  </Events>
                 </Component>
                 <Component class="javax.swing.JLabel" name="lblBuscarVeiculo">
                   <Properties>
