adicionando botoes de busca e corrigindo VagaController

--- a/src/main/java/com/luizfrancisco/estacionamento/view/BuscarVeiculo.form
+++ b/src/main/java/com/luizfrancisco/estacionamento/view/BuscarVeiculo.form
@@ -49,13 +49,7 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" alignment="0" attributes="0">
-                          <Component id="jTextField1" min="-2" pref="223" max="-2" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
-                          <Component id="btnPlaca" min="-2" pref="92" max="-2" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
-                          <Component id="btnCodigo" min="-2" pref="92" max="-2" attributes="0"/>
-                      </Group>
+                      <Component id="jTextField1" alignment="0" min="-2" pref="223" max="-2" attributes="0"/>
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="btnBuscarVeiculo" min="-2" pref="83" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -74,17 +68,13 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jTextField1" alignment="3" min="-2" pref="37" max="-2" attributes="0"/>
-                      <Component id="btnPlaca" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="btnCodigo" alignment="3" min="-2" max="-2" attributes="0"/>
-                  </Group>
+                  <Component id="jTextField1" min="-2" pref="37" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="btnBuscarVeiculo" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="btnSelecionarVeiculo" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace pref="9" max="32767" attributes="0"/>
                   <Component id="jScrollPane1" min="-2" pref="390" max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -106,19 +96,6 @@
         <Component class="javax.swing.JButton" name="btnBuscarVeiculo">
           <Properties>
             <Property name="text" type="java.lang.String" value="Buscar"/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JRadioButton" name="btnPlaca">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Placa"/>
-          </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnPlacaActionPerformed"/>
-          </Events>
-        </Component>
-        <Component class="javax.swing.JRadioButton" name="btnCodigo">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="C&#xf3;digo"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="btnSelecionarVeiculo">
