--- a/src/main/java/com/luizfrancisco/estacionamento/view/Principal.form
+++ b/src/main/java/com/luizfrancisco/estacionamento/view/Principal.form
@@ -106,13 +106,13 @@
                                       <Group type="102" attributes="0">
                                           <Component id="btnSalvarCadastroCliente" min="-2" pref="100" max="-2" attributes="0"/>
                                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                                          <Component id="btnDeletarCliente" min="-2" pref="100" max="-2" attributes="0"/>
+                                          <Component id="btnSalvarCadastroCliente1" min="-2" pref="100" max="-2" attributes="0"/>
                                       </Group>
                                       <Component id="txtBuscarCliente" min="-2" pref="242" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="btnEditarCliente" min="-2" pref="100" max="-2" attributes="0"/>
+                                      <Component id="btnSalvarCadastroCliente5" min="-2" pref="100" max="-2" attributes="0"/>
                                       <Component id="btnBuscarCliente" min="-2" pref="83" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
@@ -133,8 +133,8 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="btnSalvarCadastroCliente" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="btnDeletarCliente" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="btnEditarCliente" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="btnSalvarCadastroCliente1" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="btnSalvarCadastroCliente5" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace pref="24" max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
@@ -181,20 +181,20 @@
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSalvarCadastroClienteActionPerformed"/>
                   </Events>
                 </Component>
-                <Component class="javax.swing.JButton" name="btnDeletarCliente">
+                <Component class="javax.swing.JButton" name="btnSalvarCadastroCliente1">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Deletar"/>
                   </Properties>
                   <Events>
-                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnDeletarClienteActionPerformed"/>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSalvarCadastroCliente1ActionPerformed"/>
                   </Events>
                 </Component>
-                <Component class="javax.swing.JButton" name="btnEditarCliente">
+                <Component class="javax.swing.JButton" name="btnSalvarCadastroCliente5">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Editar"/>
                   </Properties>
                   <Events>
-                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnEditarClienteActionPerformed"/>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSalvarCadastroCliente5ActionPerformed"/>
                   </Events>
                 </Component>
                 <Component class="javax.swing.JTextField" name="txtBuscarCliente">
@@ -613,9 +613,9 @@
                                       <Group type="102" alignment="0" attributes="0">
                                           <Component id="btnSalvarCadastroOperacao" min="-2" pref="100" max="-2" attributes="0"/>
                                           <EmptySpace max="-2" attributes="0"/>
-                                          <Component id="btnDeletarOp" min="-2" pref="100" max="-2" attributes="0"/>
+                                          <Component id="btnSalvarCadastroCliente10" min="-2" pref="100" max="-2" attributes="0"/>
                                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                          <Component id="btnEditarOp" min="-2" pref="100" max="-2" attributes="0"/>
+                                          <Component id="btnSalvarCadastroCliente11" min="-2" pref="100" max="-2" attributes="0"/>
                                       </Group>
                                       <Group type="102" alignment="0" attributes="0">
                                           <Component id="txtBuscarOperacao" min="-2" pref="129" max="-2" attributes="0"/>
@@ -667,8 +667,8 @@
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="3" attributes="0">
                                       <Component id="btnSalvarCadastroOperacao" alignment="3" min="-2" max="-2" attributes="0"/>
-                                      <Component id="btnDeletarOp" alignment="3" min="-2" max="-2" attributes="0"/>
-                                      <Component id="btnEditarOp" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      <Component id="btnSalvarCadastroCliente10" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      <Component id="btnSalvarCadastroCliente11" alignment="3" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace max="32767" attributes="0"/>
                                   <Group type="103" groupAlignment="3" attributes="0">
@@ -729,15 +729,15 @@
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSalvarCadastroOperacaoActionPerformed"/>
                   </Events>
                 </Component>
-                <Component class="javax.swing.JButton" name="btnDeletarOp">
+                <Component class="javax.swing.JButton" name="btnSalvarCadastroCliente10">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Deletar"/>
                   </Properties>
                   <Events>
-                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnDeletarOpActionPerformed"/>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSalvarCadastroCliente10ActionPerformed"/>
                   </Events>
                 </Component>
-                <Component class="javax.swing.JButton" name="btnEditarOp">
+                <Component class="javax.swing.JButton" name="btnSalvarCadastroCliente11">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Editar"/>
                   </Properties>
